feat(dango): create PythClient (#508)
* feat: add pyth client with SSE connection

* * add event-stream library

* * using reqwest_eventsource lib to retrieve SSE

* * add constants

* * clean tests

* * using a Shared variable instead of mpsc::channel

* * split pyth in pyth client and types

* * move pyth ids to pyth-types and adjusted files

* * use PythClient for PP

* * add exponential backoff to PythClient

* * adjust PythClient run function

* * add get_latest_vaas on PythClient

* * add PythMockCache

* * create pyth client PP handler

* * comments

* * code improvement

* * add log error

* * use mocked data in tests

* * add cache for sse

* * add Pyth test mode for PP

* * improve code

* * improve tests

* * small fix

* * fix merge

* * small fix

* * move all pyth-related structs/constants under pyth-types

* * remove space

* * retrieve data from network if not already in cache

* * improve code

* * improve code

* * small fix

* Refactor suggestions for PythClient (#527)

* rename PythMiddlewareCache to PythClientCache

* change base_url parameter to IntoUrl

* move pyth_ids function from PP to PythPPHandler

* fix url concatenation

* fix test

* return newer data on stream function on PythClientCache

* improve tests

* latest_vaas function of PythClientCache now returns new data each call

* adjust tests

* change PythClientCache to use AtomicU64 instead of Mutex to retrieve newer data at each call

* apply suggestions

* improve tests

* code clean up

* code clean up

* PythClient fn close now close the stream

* move the logic for update stream from PP to PythPPHandler

*rename struct PythPPHandler

* add close steam logic on PythClientCache

* improve PythClients tests

---------

Co-authored-by: Zexsor33 <c.mirco89@gmail.com>

* remove wormhole-attester dependency

* fix test

* improve pp test

* lint

* pass QuerierWrapper as & to PythHandler

* add PythHandler test

* minor changes

* update `Cargo.toml`

* remove `ProposerError`; simply 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ members = [
   "hyperlane/mailbox",
   "hyperlane/va",
   "indexer/*",
+  "pyth/client",
+  "pyth/types",
 ]
 resolver = "2"
 
@@ -111,11 +113,12 @@ pbkdf2                  = "0.12"
 proc-macro2             = "1"
 proptest                = "1"
 prost                   = "0.13"
-pyth-sdk                = "0.8.0"
-pythnet-sdk             = "2"
+pyth-sdk                = "0.8"
+pythnet-sdk             = { git = "https://github.com/pyth-network/pyth-crosschain", rev = "6077910" } # TODO: use crates.io once published
 quote                   = "1"
 rand                    = "0.8" # Can't use 0.9 because RustCrypto libraries still depend on 0.8
-reqwest                 = "0.12"
+reqwest                 = { version = "0.12", features = ["stream"] }
+reqwest-eventsource     = "0.6.0"
 ripemd                  = "0.1"
 rocksdb                 = "0.23"
 serde                   = "1"
@@ -142,6 +145,7 @@ tower-abci              = "0.19"
 tracing                 = "0.1"
 tracing-actix-web       = "0.7"
 tracing-subscriber      = { version = "0.3", features = ["env-filter", "fmt"] }
+url                     = "2.5.4"
 uuid                    = { version = "1", features = ["serde", "v4"] }
 wasmer                  = "5"
 wasmer-middlewares      = "5"
@@ -201,6 +205,10 @@ indexer-sql           = { path = "indexer/sql" }
 indexer-sql-migration = { path = "indexer/sql-migration" }
 indexer-testing       = { path = "indexer/testing" }
 
+# Pyth packages
+pyth-client = { path = "pyth/client" }
+pyth-types  = { path = "pyth/types" }
+
 # Hyperlane packages
 hyperlane-ism     = { path = "hyperlane/isms/multisig" }
 hyperlane-mailbox = { path = "hyperlane/mailbox" }
@@ -246,13 +254,6 @@ features = [
   "with-uuid",
 ]
 version = "1"
-
-# The Pyth attester SDK is not published to crates.io.
-# Import from GitHub, using the latest commit at this time.
-# TODO: Ask pyth team to make a stable release and publish the crate.
-[workspace.dependencies.pyth-wormhole-attester-sdk]
-git = "https://github.com/pyth-network/pyth-crosschain"
-rev = "cd67cd8"
 
 [profile.release]
 codegen-units    = 1
