--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -31,6 +31,8 @@ hyperlane-types   = { workspace = true }
 indexer-httpd     = { workspace = true }
 indexer-sql       = { workspace = true, features = ["tracing"] }
 k256              = { workspace = true }
+pyth-client       = { workspace = true }
+pyth-types        = { workspace = true }
 sea-orm           = { workspace = true }
 serde             = { workspace = true }
 serde_json        = { workspace = true }
@@ -48,7 +50,6 @@ dango-warp            = { workspace = true, features = ["library"] }
 indexer-disk-saver    = { workspace = true }
 indexer-testing       = { workspace = true }
 proptest              = { workspace = true }
-pyth-sdk              = { workspace = true }
 rand                  = { workspace = true }
 reqwest               = { workspace = true, features = ["json"] }
 serde_json            = { workspace = true }
