--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ target/
 **/proptest-regressions/
 **/*.proptest-regressions
 
+# Upload the testdata for the pyth
+!pyth/client/testdata/
+
 # macOS
 **/.DS_Store
 
