--- a/dango/app/Cargo.toml
+++ b/dango/app/Cargo.toml
@@ -10,11 +10,14 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [dependencies]
-anyhow      = { workspace = true }
-dango-types = { workspace = true }
-grug        = { workspace = true }
-grug-app    = { workspace = true }
-prost       = { workspace = true }
-reqwest     = { workspace = true, features = ["blocking", "json"] }
-thiserror   = { workspace = true }
-tracing     = { workspace = true }
+anyhow       = { workspace = true }
+dango-types  = { workspace = true }
+grug         = { workspace = true }
+grug-app     = { workspace = true }
+prost        = { workspace = true }
+pyth-client  = { workspace = true }
+pyth-types   = { workspace = true }
+reqwest      = { workspace = true }
+tokio        = { workspace = true }
+tokio-stream = { workspace = true }
+tracing      = { workspace = true }
