--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 members = [
   "config-parser",
   "dango/account/*",
-  "dango/app",
   "dango/auth",
   "dango/bank",
   "dango/cli",
@@ -14,6 +13,7 @@ members = [
   "dango/indexer/sql-migration",
   "dango/lending",
   "dango/oracle",
+  "dango/proposal-preparer",
   "dango/taxman",
   "dango/testing",
   "dango/types",
@@ -179,7 +179,6 @@ dango-account-margin        = { path = "dango/account/margin" }
 dango-account-multi         = { path = "dango/account/multi" }
 dango-account-spot          = { path = "dango/account/spot" }
 dango-amm                   = { path = "dango/amm" }
-dango-app                   = { path = "dango/app" }
 dango-auth                  = { path = "dango/auth" }
 dango-bank                  = { path = "dango/bank" }
 dango-client                = { path = "dango/client" }
@@ -191,6 +190,7 @@ dango-indexer-sql           = { path = "dango/indexer/sql" }
 dango-indexer-sql-migration = { path = "dango/indexer/sql-migration" }
 dango-lending               = { path = "dango/lending" }
 dango-oracle                = { path = "dango/oracle" }
+dango-proposal-preparer     = { path = "dango/proposal-preparer" }
 dango-taxman                = { path = "dango/taxman" }
 dango-testing               = { path = "dango/testing" }
 dango-token-factory         = { path = "dango/token-factory" }
