--- a/dango/proposal-preparer/Cargo.toml
+++ b/dango/proposal-preparer/Cargo.toml
@@ -4,7 +4,7 @@ categories    = { workspace = true }
 documentation = { workspace = true }
 edition       = { workspace = true }
 license       = { workspace = true }
-name          = "dango-app"
+name          = "dango-proposal-preparer"
 repository    = { workspace = true }
 rust-version  = { workspace = true }
 version       = { workspace = true }
