--- a/grug/types/Cargo.toml
+++ b/grug/types/Cargo.toml
@@ -25,6 +25,7 @@ serde_json    = { workspace = true }
 serde_with    = { workspace = true }
 sha2          = { workspace = true }
 sha3          = { workspace = true }
+strum         = { workspace = true }
 strum_macros  = { workspace = true }
 thiserror     = { workspace = true }
 
