feat(indexer): GraphQL query-store

--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -27,6 +27,7 @@ base64                  = { workspace = true }
 chrono                  = { workspace = true }
 clap                    = { workspace = true }
 grug-app                = { workspace = true }
+grug-math               = { workspace = true }
 grug-types              = { workspace = true }
 indexer-sql             = { workspace = true }
 itertools               = { workspace = true }
