--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ target/
 # Upload the testdata for the pyth
 !pyth/client/testdata/
 
+# Schemas
+grug/client/src/http/schemas/schema.graphql
+
 # macOS
 **/.DS_Store
 
