update rustfmt config and run formatter

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,15 +1,16 @@
 # https://rust-lang.github.io/rustfmt/
-condense_wildcard_suffixes     = true       # unstable
-format_macro_bodies            = false      # unstable
-format_macro_matchers          = false      # unstable
-group_imports                  = "Preserve" # unstable
-imports_granularity            = "One"      # unstable
+condense_wildcard_suffixes     = true
+format_macro_bodies            = false
+format_macro_matchers          = false
+group_imports                  = "Preserve"
+imports_granularity            = "One"
 match_block_trailing_comma     = true
-normalize_comments             = true       # unstable
-normalize_doc_attributes       = true       # unstable
-overflow_delimited_expr        = true       # unstable
-reorder_impl_items             = true       # unstable
-single_line_if_else_max_width  = 0          # unstable
-single_line_let_else_max_width = 0          # unstable
+normalize_comments             = true
+normalize_doc_attributes       = true
+overflow_delimited_expr        = true
+reorder_impl_items             = true
+single_line_if_else_max_width  = 0
+single_line_let_else_max_width = 0
+style_edition                  = "2024"
 use_field_init_shorthand       = true
 use_try_shorthand              = true
