--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,7 +100,7 @@ futures                 = "0.3"
 futures-util            = "0.3"
 glob                    = "0.3"
 hex                     = "0.4"
-hex-literal             = "0.4"
+hex-literal             = "0.4" # requires rust edition 2024 in order to upgrade to v1
 home                    = "0.5"
 ics23                   = "0.12"
 itertools               = "0"
@@ -116,7 +116,7 @@ prost                   = "0.13"
 pyth-sdk                = "0.8"
 pythnet-sdk             = { git = "https://github.com/pyth-network/pyth-crosschain", rev = "6077910" } # TODO: use crates.io once published
 quote                   = "1"
-rand                    = "0.8" # Can't use 0.9 because RustCrypto libraries still depend on 0.8
+rand                    = "0.8" # can't use 0.9 because RustCrypto libraries still depend on 0.8
 reqwest                 = { version = "0.12", features = ["stream"] }
 reqwest-eventsource     = "0.6.0"
 ripemd                  = "0.1"
