--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -7,7 +7,13 @@
     },
     "noEmit": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "env.d.ts", ".paraglide/**/*.js"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "env.d.ts",
+    ".paraglide/**/*.js",
+    "../../config/tailwind/config.ts"
+  ],
   "exclude": ["node_modules"],
   "references": [
     {
