--- a/dango/auth/Cargo.toml
+++ b/dango/auth/Cargo.toml
@@ -16,5 +16,6 @@ base64                = { workspace = true }
 dango-account-factory = { workspace = true, features = ["library"] }
 dango-types           = { workspace = true }
 grug                  = { workspace = true }
+sha2                  = { workspace = true }
 
 [dev-dependencies]
