--- a/dango/types/Cargo.toml
+++ b/dango/types/Cargo.toml
@@ -19,7 +19,7 @@ hyperlane-types = { workspace = true }
 paste           = { workspace = true }
 pyth-types      = { workspace = true }
 serde           = { workspace = true, features = ["derive"] }
-serde_json      = { workspace = true }
+sha2            = { workspace = true }
 thiserror       = { workspace = true }
 
 [dev-dependencies]
