--- a/grug/mocks/account/Cargo.toml
+++ b/grug/mocks/account/Cargo.toml
@@ -27,3 +27,4 @@ grug-ffi     = { workspace = true }
 grug-storage = { workspace = true }
 grug-types   = { workspace = true }
 serde        = { workspace = true, features = ["derive"] }
+sha2         = { workspace = true }
