--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -21,12 +21,14 @@ async-stream          = { workspace = true }
 async-trait           = { workspace = true }
 borsh                 = { workspace = true }
 futures               = { workspace = true }
+futures-util          = { workspace = true }
 grug-app              = { workspace = true }
 grug-math             = { workspace = true }
 grug-types            = { workspace = true }
 indexer-disk-saver    = { workspace = true }
 indexer-sql-migration = { workspace = true }
 sea-orm               = { workspace = true }
+sea-orm-migration     = { workspace = true }
 serde                 = { workspace = true }
 serde_json            = { workspace = true }
 sqlx                  = { workspace = true }
