add ethereum address as a key type

--- a/dango/auth/Cargo.toml
+++ b/dango/auth/Cargo.toml
@@ -16,6 +16,7 @@ base64                = { workspace = true }
 dango-account-factory = { workspace = true, features = ["library"] }
 dango-types           = { workspace = true }
 grug                  = { workspace = true }
+hex                   = { workspace = true }
 sha2                  = { workspace = true }
 
 [dev-dependencies]
