reverse the dependency between dango-account-factory and dango-auth

--- a/dango/account/factory/Cargo.toml
+++ b/dango/account/factory/Cargo.toml
@@ -19,6 +19,7 @@ library = []
 
 [dependencies]
 anyhow      = { workspace = true }
+dango-auth  = { workspace = true }
 dango-types = { workspace = true }
 grug        = { workspace = true }
 
