--- a/dango/auth/Cargo.toml
+++ b/dango/auth/Cargo.toml
@@ -16,6 +16,7 @@ base64      = { workspace = true }
 dango-types = { workspace = true }
 grug        = { workspace = true }
 hex         = { workspace = true }
+serde       = { workspace = true }
 sha2        = { workspace = true }
 
 [dev-dependencies]
