feat: implement log2 for I256

--- a/dango/dex/Cargo.toml
+++ b/dango/dex/Cargo.toml
@@ -21,6 +21,7 @@ library = []
 anyhow      = { workspace = true }
 dango-types = { workspace = true }
 grug        = { workspace = true }
+bnum        = { workspace = true }
 
 [dev-dependencies]
 test-case = { workspace = true }
