--- a/dango/auth/Cargo.toml
+++ b/dango/auth/Cargo.toml
@@ -10,13 +10,13 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [dependencies]
-alloy                 = { workspace = true, features = ["dyn-abi", "eip712"] }
-anyhow                = { workspace = true }
-base64                = { workspace = true }
-dango-account-factory = { workspace = true, features = ["library"] }
-dango-types           = { workspace = true }
-grug                  = { workspace = true }
-hex                   = { workspace = true }
-sha2                  = { workspace = true }
+alloy       = { workspace = true, features = ["dyn-abi", "eip712"] }
+anyhow      = { workspace = true }
+base64      = { workspace = true }
+dango-types = { workspace = true }
+grug        = { workspace = true }
+hex         = { workspace = true }
+serde       = { workspace = true }
+sha2        = { workspace = true }
 
 [dev-dependencies]
