--- a/dango/indexer/sql/Cargo.toml
+++ b/dango/indexer/sql/Cargo.toml
@@ -24,6 +24,7 @@ grug-math                   = { workspace = true }
 grug-types                  = { workspace = true }
 indexer-disk-saver          = { workspace = true }
 indexer-sql                 = { workspace = true }
+itertools                   = { workspace = true }
 sea-orm                     = { workspace = true }
 serde                       = { workspace = true }
 serde_json                  = { workspace = true }
