--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     image: postgres:17
     shm_size: 1gb
     ports:
-      - 0.0.0.0:5432:5432
+      # For security reasons, postgres should only accept connections from localhost.
+      - 127.0.0.1:5432:5432
     volumes:
       - ./data/db:/var/lib/postgresql/data
       # For when we'll need an init script ran at initialization
