--- a/ui/workers/proxy/wrangler.toml
+++ b/ui/workers/proxy/wrangler.toml
@@ -2,7 +2,7 @@
 compatibility_date  = "2024-10-04"
 compatibility_flags = ["nodejs_compat"]
 main                = "src/index.ts"
-name                = "reverse-proxy-devnet"
+name                = "proxy-devserver"
 
 [build]
 command   = "pnpm build"
