--- a/ui/portal/web/package.json
+++ b/ui/portal/web/package.json
@@ -13,6 +13,8 @@
     "@left-curve/dango": "workspace:^",
     "@left-curve/store": "workspace:^",
     "@left-curve/ui-config": "workspace:^",
+    "@sentry/react": "^9.10.1",
+    "@sentry/webpack-plugin": "^3.2.4",
     "@tanstack/react-query": "catalog:",
     "@tanstack/react-router": "catalog:",
     "@tanstack/react-table": "^8.21.2",
