feat: remove coingecko and use oracle contract

--- a/sdk/dango/package.json
+++ b/sdk/dango/package.json
@@ -23,6 +23,9 @@
   "files": [
     "build"
   ],
+  "imports": {
+    "#types/*": "./src/types/*"
+  },
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
