--- a/pyth/client/Cargo.toml
+++ b/pyth/client/Cargo.toml
@@ -25,4 +25,6 @@ tracing             = { workspace = true }
 url                 = { workspace = true }
 
 [dev-dependencies]
+axum        = { workspace = true }
 dango-types = { workspace = true }
+futures     = { workspace = true }
