--- a/grug/client/Cargo.toml
+++ b/grug/client/Cargo.toml
@@ -15,7 +15,7 @@ anyhow         = { workspace = true }
 async-trait    = { workspace = true }
 grug-jmt       = { workspace = true }
 grug-math      = { workspace = true }
-grug-types     = { workspace = true }
+grug-types     = { workspace = true, features = ["tendermint"] }
 serde          = { workspace = true }
 tendermint     = { workspace = true }
 tendermint-rpc = { workspace = true, features = ["http-client"] }
