chore: update pipeline to trigger in testnet branch

--- a/.github/workflows/portal-deployment.yaml
+++ b/.github/workflows/portal-deployment.yaml
@@ -5,7 +5,8 @@ on:
   push:
     branches:
       - "main"
-      - "develop"
+      - "ui/testnet"
+      - "ui/release"
     paths:
       - "sdk/**"
       - "ui/store/**"
