--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -37,7 +37,7 @@ serde                   = { workspace = true }
 serde_json              = { workspace = true }
 tempfile                = { workspace = true }
 tendermint              = { workspace = true }
-tendermint-rpc          = { workspace = true }
+tendermint-rpc          = { workspace = true, features = ["http-client"] }
 thiserror               = { workspace = true }
 tokio                   = { workspace = true }
 tracing                 = { workspace = true, optional = true }
