--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,6 +123,7 @@ reqwest                 = { version = "0.12", features = ["stream"] }
 reqwest-eventsource     = "0.6.0"
 ripemd                  = "0.1"
 rocksdb                 = "0.23"
+sentry                  = "0.37.0"
 serde                   = "1"
 serde_json              = "1"
 serde_with              = "3"
