--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,7 +123,8 @@ reqwest                 = { version = "0.12", features = ["stream"] }
 reqwest-eventsource     = "0.6.0"
 ripemd                  = "0.1"
 rocksdb                 = "0.23"
-sentry                  = "0.37.0"
+sentry                  = { version = "0.37", features = ["log", "tracing"] }
+sentry-actix            = "0.37"
 serde                   = "1"
 serde_json              = "1"
 serde_with              = "3"
