--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -1,6 +1,9 @@
 # This is a TOML config file.
 # For more information, see https://github.com/toml-lang/toml
 
+# Logging verbosity: error|warn|info|debug|trace
+log_level = "info"
+
 ################################################################################
 ###                            Grug Configuration                            ###
 ################################################################################
@@ -68,3 +71,24 @@ chain_id = "dango-1"
 
 # Scaling factor to apply to simulated gas consumption.
 gas_adjustment = 1.4
+
+################################################################################
+###                          Sentry Configuration                           ###
+################################################################################
+
+[sentry]
+
+# Whether to enable Sentry.
+enabled = false
+
+# DSN to use for Sentry.
+dsn = "https://your-dsn-here"
+
+# Environment to use for Sentry.
+environment = "development"
+
+# Sample rate for Sentry.
+sample_rate = 1.0
+
+# Traces sample rate for Sentry.
+traces_sample_rate = 1.0
