--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -1,7 +1,7 @@
 # This is a TOML config file.
 # For more information, see https://github.com/toml-lang/toml
 
-# Logging verbosity: error|warn|info|debug|trace
+# Logging verbosity: error|warn|info|debug|trace.
 log_level = "info"
 
 ################################################################################
