--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -33,6 +33,8 @@ indexer-sql             = { workspace = true }
 itertools               = { workspace = true }
 num_cpus                = { workspace = true }
 sea-orm                 = { workspace = true }
+sentry                  = { workspace = true }
+sentry-actix            = { workspace = true }
 serde                   = { workspace = true }
 serde_json              = { workspace = true }
 tempfile                = { workspace = true }
