Add GraphQL Sentry error reporting

--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -23,6 +23,7 @@ actix-web               = { workspace = true }
 anyhow                  = { workspace = true }
 async-graphql           = { workspace = true }
 async-graphql-actix-web = { workspace = true }
+async-trait             = { workspace = true }
 base64                  = { workspace = true }
 chrono                  = { workspace = true }
 clap                    = { workspace = true }
