--- a/.github/workflows/docker-multi.yaml
+++ b/.github/workflows/docker-multi.yaml
@@ -7,57 +7,79 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  set-vars:
     runs-on: ubuntu-latest
-
+    outputs:
+      tag: ${{ steps.vars.outputs.tag }}
+      sha: ${{ steps.vars.outputs.sha }}
     steps:
       - uses: actions/checkout@v4
+      - name: Set git SHA tag
+        id: vars
+        run: |
+          echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
+  build-cometbft:
+    needs: set-vars
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
-
       - uses: docker/setup-buildx-action@v3
-
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set git SHA tag
-        id: vars
-        run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-      # CometBFT Image
       - uses: docker/build-push-action@v5
         with:
           context: ./docker/cometbft
-          # push: ${{ github.event_name == 'push' }}
-          # push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository }}/cometbft:${{ steps.vars.outputs.tag }}
+            ghcr.io/${{ github.repository }}/cometbft:${{ needs.set-vars.outputs.tag }}
             ghcr.io/${{ github.repository }}/cometbft:latest
 
-      # Dango Image
+  build-dango:
+    needs: set-vars
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v5
         with:
           context: ./docker/dango
           build-args: |
-            LEFT_CURVE_GIT_COMMIT=${{ steps.vars.outputs.sha }}
-          # push: true
+            LEFT_CURVE_GIT_COMMIT=${{ needs.set-vars.outputs.sha }}
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository }}/dango:${{ steps.vars.outputs.tag }}
+            ghcr.io/${{ github.repository }}/dango:${{ needs.set-vars.outputs.tag }}
             ghcr.io/${{ github.repository }}/dango:latest
 
-      # Optimizer Image
+  build-optimizer:
+    needs: set-vars
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v5
         with:
           context: ./docker/optimizer
           build-args: |
-            LEFT_CURVE_GIT_COMMIT=${{ steps.vars.outputs.sha }}
-          # push: true
+            LEFT_CURVE_GIT_COMMIT=${{ needs.set-vars.outputs.sha }}
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository }}/optimizer:${{ steps.vars.outputs.tag }}
+            ghcr.io/${{ github.repository }}/optimizer:${{ needs.set-vars.outputs.tag }}
             ghcr.io/${{ github.repository }}/optimizer:latest
